Thu Feb  8 17:57:02 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/Storage.java: This new class contains
	reader and writer methods for OEMM structures.
	* src/org/jcae/mesh/oemm/IndexedStorage.java: Class removed,
	indexOEMM() is moved into RawStorage, and other methods have been
	moved into Storage.

Thu Feb  8 16:35:09 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/IndexedStorage.java: Modify internal format
	of OEMM "*a" files.

Wed Feb  7 16:24:16 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: When loading
	partial mesh through OEMM, do not contract edges when both endpoints
	are not writable.

Tue Feb  6 12:36:26 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMMMesh.java
	  src/org/jcae/mesh/oemm/OEMMTriangle.java
	  src/org/jcae/mesh/oemm/OEMMVertex.java: Remove useless classes.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Also
	add penalty to edges which cannot be contracted when "maxtriangles"
	parameter is set.

Sun Feb  4 23:47:56 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshToSoupConvert.java: Ensure that nodes
	on boundary faces have the same coordinates on all faces.

Sun Feb  4 02:34:17 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/IndexedStorage.java
	  src/org/jcae/mesh/oemm/OEMMViewer.java: Display free edges in red.

Thu Feb  1 18:46:38 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/IndexedStorage.java
	  src/org/jcae/mesh/oemm/OEMMNode.java: In OEMM structure file, write
	file names relative to top-level directory so that the whole OEMM
	directory can be renamed without trouble.

Wed Jan 24 14:35:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
